--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section class="hero">
         <div class="hero-container">
             <div class="campaign-image-container">
-                <img src="photo_2025-10-25_17-59-42.jpg" alt="Агитационный лист кандидата Садык" class="campaign-image">
+                <img src="1.jpg" alt="Агитационный лист кандидата" class="campaign-image">
             </div>
         </div>
     </section>
@@ -166,3 +166,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
